--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
 
 	<!-- CSS
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<link rel="stylesheet" href="assets/css/application.min.css">
+	<link rel="stylesheet" href="css/application.min.css">
 
 	<!-- Scripts
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<script src="assets/js/application.min.js"></script>
+	<script src="js/application.min.js"></script>
 
 </head>
 <body>
